# GENIAC_CodeAsPolicy_Practice

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
benchmarks/: README.md  baseline_rule_based_test.json  baseline_rule_based_train.json  baseline_rule_based_train_mini.json  baseline_rule_based_v1.json  baseline_rule_based_validation.json  hard_benchmark_v1.yaml  hard_benchmark_v1_test.yaml  hard_benchmark_v1_train.yaml  hard_benchmark_v1_validation.yaml  train_mini.yaml
docs/: architecture.md  competition-notes.md  experiment-log.md  model-improvement-roadmap.md  rigorous-verification-plan.md  roadmap.md
examples/: sample_run.py
src/geniac_cap/: __init__.py  cli.py  config.py  exceptions.py  models.py
src/geniac_cap/environment/: __init__.py  state.py  toy_robot.py
src/geniac_cap/evaluation/: __init__.py  bandit.py  cascade.py  evaluator.py  metrics.py
src/geniac_cap/execution/: __init__.py  executor.py  validation.py
src/geniac_cap/perception/: __init__.py  base.py  ground_truth.py  renderer.py  vlm_perception.py
tests/: test_anthropic_planner.py  test_bandit.py  test_benchmark.py  test_cascade.py  test_cli.py  test_environment.py  test_evaluator.py  test_executor.py  test_feedback.py  test_gemini_planner.py  test_groq_planner.py  test_metrics_comparison.py  test_planner.py  test_prompt_hillclimb.py  test_renderer.py  test_task_generator.py  test_task_loader.py  test_task_split.py  test_vlm_perception.py  test_vocabulary_distiller.py
(+17 files in other folders)
