[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geniac-cap-practice"
version = "0.1.0"
description = "A small Code-as-Policy practice project: NL instruction -> robot action plan -> safe execution -> evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Practice Project Author" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
llm = [
    "anthropic>=0.40,<1.0",
    "google-genai>=0.5",
    "groq>=0.11",
]
vision = [
    "Pillow>=10.0",
]

[project.scripts]
geniac-cap = "geniac_cap.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"geniac_cap.tasks" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
